# wren-update

./: AI.md  ARCHITECTURE_PROPOSAL.md  CLAUDE.md  DATASET_IMPLEMENTATION_CHECKLIST.md  GETTING_STARTED.md  IMPLEMENTATION_EVALUATION.md  IMPLEMENTATION_PLAN.md  MASTER_IMPLEMENTATION_CHECKLIST.md  MVP_FEATURES.md  POC_README.md  PYTHON_BACKEND_ARCHITECTURE.md  SELF_IMPLEMENTATION_PLAN.md  SETUP.md  docker-compose.poc.yml
dataask-backend/: Dockerfile  README.md  pyproject.toml
dataask-backend/app/: config.py  main.py
dataask-backend/app/api/: deps.py
dataask-backend/app/api/routers/: auth.py  connections.py  dashboards.py  health.py  (+4 more)
dataask-backend/app/clients/: __init__.py  ibis_client.py  wren_ai_client.py
dataask-backend/app/core/: database.py  encryption.py  security.py
dataask-backend/app/models/: connection.py  dashboard.py  query_history.py  saved_query.py  scheduled_query.py  user.py  workspace.py
dataask-backend/app/repositories/: connection_repository.py  dashboard_repository.py  user_repository.py
dataask-backend/app/schemas/: ai_query.py  auth.py  connection.py  dashboard.py  query.py  query_history.py  saved_query.py  scheduled_query.py  workspace.py
dataask-backend/app/services/: auth_service.py  connection_service.py  dashboard_service.py  email_service.py  scheduled_query_executor.py  scheduler_service.py
dataask-backend/app/utils/: parameters.py
dataask-backend/migrations/: env.py
dataask-backend/migrations/versions/: 20250106_001_initial_schema.py  20250106_002_update_connections_table.py  20250106_003_add_saved_queries.py  20250106_004_add_query_history.py  20250106_005_add_dashboard_parameters.py  20250106_006_add_scheduled_queries.py
dataask-backend/scripts/: create_superuser.py
(+191 files in other folders)
